Aggiunta/correzione dei commenti

--- a/training.ipynb
+++ b/training.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,8 +29,6 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import tree\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.impute import SimpleImputer"
    ]
@@ -34,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lettura dei file csv\n",
+    "# Lettura dei file csv\n",
     "train_path = \"train.csv\"\n",
     "train = pd.read_csv(train_path)\n",
     "\n",
@@ -262,6 +267,10 @@
     }
    ],
    "source": [
+    "# Visualizzo i dati\n",
+    "# Non utilizzo .head() in quanto i primi valori (o gli ultimi con tail()) \n",
+    "# non contengono valori nulli. Ho scelto questa porzione in quanto più \n",
+    "# rappresentativa del dataset\n",
     "train[72:77]"
    ]
   },
@@ -281,9 +290,9 @@
     }
    ],
    "source": [
-    "# ci sono dei valori mancanti nella colonna TotalCharges\n",
+    "# Ci sono dei valori mancanti nella colonna TotalCharges\n",
     "\n",
-    "#controllo sullo shape per verificare la corretta creazione di test e train\n",
+    "# Controllo sullo shape per verificare la corretta creazione di test e train\n",
     "print(\"Train shape:\",train.shape)\n",
     "print(\"Test shape:\",test.shape)\n",
     "print(\"Total row:\",train.shape[0]+test.shape[0])"
@@ -324,7 +333,7 @@
     }
    ],
    "source": [
-    "# calcolo dei valori missing in funzione delle colonne\n",
+    "# Calcolo dei valori missing in funzione delle colonne\n",
     "train_missing_values_count = train.isnull().sum()\n",
     "print(train_missing_values_count)\n",
     "test_missing_values_count = test.isnull().sum()"
@@ -336,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# eppure TotalCharges ha un valore mancante"
+    "# Eppure TotalCharges ha un valore mancante"
    ]
   },
   {
@@ -377,7 +386,7 @@
     }
    ],
    "source": [
-    "# calcolo dei valori missing in funzione dello spazio\n",
+    "# Calcolo dei valori missing in funzione dello spazio\n",
     "missing_values_count = (train==' ').sum()\n",
     "missing_values_count"
    ]
@@ -388,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# i valori mancanti sono rappresentati da uno spazio ed in totale sono 10"
+    "# I valori mancanti sono rappresentati da uno spazio ed in totale sono 10 (8 in train +2 in test)"
    ]
   },
   {
@@ -432,8 +441,8 @@
     }
    ],
    "source": [
-    "#creazione degli insiemi X e y sia per test che per training\n",
-    "# il customerID è ridondante all'indice, lo elimino\n",
+    "# Creazione degli insiemi X e y sia per test che per training.\n",
+    "# Il customerID è ridondante all'indice, lo elimino\n",
     "train_file_y = train.Churn\n",
     "train_file_X = train.drop(['Churn','customerID'], axis=1)\n",
     "\n",
@@ -452,7 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# funzione che data una colonna contenente valori yes/no li converte in 1/0\n",
+    "# Funzione che data una colonna contenente valori yes/no li converte in 1/0\n",
     "def ynTransform(x):\n",
     "    for n in x.keys():\n",
     "        if x[n].strip()=='Yes':\n",
@@ -467,7 +476,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# applicazione della funzione precedente ad y\n",
+    "# Applicazione della funzione precedente ad y\n",
     "ynTransform(train_file_y)\n",
     "ynTransform(test_file_y)"
    ]
@@ -493,7 +502,6 @@
     }
    ],
    "source": [
-    "#train_file_y=train_file_y.astype('float')\n",
     "train_file_y.describe()"
    ]
   },
@@ -535,7 +543,7 @@
       "-------------------------------------\n",
       "count           4507\n",
       "unique          4507\n",
-      "top       0516-OOHAR\n",
+      "top       1465-LNTLJ\n",
       "freq               1\n",
       "Name: customerID, dtype: object\n",
       "-------------------------------------\n",
@@ -674,8 +682,8 @@
     }
    ],
    "source": [
-    "# visualizzo il numero di valori unici nelle colonne per capire la loro composizione\n",
-    "# per semplicità di rappresentazione riporto solo train (è stata confrontato con test)\n",
+    "# Visualizzo il numero di valori unici nelle colonne per capire la loro composizione.\n",
+    "# Per semplicità di rappresentazione riporto solo train (è stata confrontato con test)\n",
     "for c in totalColunm:\n",
     "    print('-------------------------------------')\n",
     "    print(train[c].describe())"
@@ -687,7 +695,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# la maggior parte delle colonne yes/no in realtà presentano un terzo valore\n",
+    "# La maggior parte delle colonne yes/no in realtà presentano un terzo valore\n",
+    "\n",
     "# Identificop quelle con valori esclusivamente yes/no \n",
     "ynColumns = [\"Partner\",\"Dependents\",\"PhoneService\",\"PaperlessBilling\"]"
    ]
@@ -698,7 +707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trasformazione dei valori yes/no in 1/0\n",
+    "# Trasformazione dei valori yes/no in 1/0\n",
     "for c in ynColumns:\n",
     "    ynTransform(train_file_X[c])\n",
     "    ynTransform(test_file_X[c])"
@@ -909,6 +918,7 @@
     }
    ],
    "source": [
+    "# Visualizzo la tabella ottenuta\n",
     "train_file_X.head()"
    ]
   },
@@ -921,33 +931,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      SeniorCitizen Partner Dependents  tenure PhoneService PaperlessBilling  \\\n",
-      "0                 1       0          0       2            1                0   \n",
-      "1                 0       1          1      64            1                1   \n",
-      "2                 0       1          1       2            1                0   \n",
-      "3                 0       1          0      71            1                0   \n",
-      "4                 1       0          0      51            1                0   \n",
-      "...             ...     ...        ...     ...          ...              ...   \n",
-      "4502              0       0          0      46            1                1   \n",
-      "4503              1       0          0      17            1                1   \n",
-      "4504              0       1          1      35            1                0   \n",
-      "4505              0       0          0      24            1                0   \n",
-      "4506              0       0          0      72            1                1   \n",
+      "    SeniorCitizen Partner Dependents  tenure PhoneService PaperlessBilling  \\\n",
+      "72              0       1          1       8            1                0   \n",
+      "73              0       0          0      49            1                1   \n",
+      "74              0       0          0      46            1                1   \n",
+      "75              0       1          1       0            1                0   \n",
+      "76              0       1          0      24            1                0   \n",
       "\n",
-      "      MonthlyCharges TotalCharges  \n",
-      "0              43.95         85.1  \n",
-      "1              86.80      5327.25  \n",
-      "2              20.30        40.25  \n",
-      "3              83.20       6126.1  \n",
-      "4              19.60        967.9  \n",
-      "...              ...          ...  \n",
-      "4502           21.10        937.1  \n",
-      "4503           94.20      1608.15  \n",
-      "4504           25.45       809.25  \n",
-      "4505           56.35       1381.2  \n",
-      "4506          111.60      8012.75  \n",
-      "\n",
-      "[4507 rows x 8 columns]\n",
+      "    MonthlyCharges TotalCharges  \n",
+      "72           55.75        446.8  \n",
+      "73           74.45       3721.9  \n",
+      "74          104.40       4904.2  \n",
+      "75           20.00               \n",
+      "76           20.40        482.8  \n",
       "/n Index(['SeniorCitizen', 'Partner', 'Dependents', 'tenure', 'PhoneService',\n",
       "       'PaperlessBilling', 'MonthlyCharges', 'TotalCharges'],\n",
       "      dtype='object')\n"
@@ -955,12 +951,12 @@
     }
    ],
    "source": [
-    "# le colonne risultano in parte numeriche ed in parte non numeriche (categoriche)\n",
+    "# Le colonne risultano in parte numeriche ed in parte non numeriche (categoriche)\n",
     "# Dopo averle individuate le separo\n",
     "notNumericalColumn = [\"gender\",\"MultipleLines\",\"InternetService\",\"OnlineSecurity\",\"OnlineBackup\",\"DeviceProtection\",\"TechSupport\",\"StreamingTV\",\"StreamingMovies\",\"Contract\",\"PaymentMethod\"]\n",
     "trainXnum = train_file_X.drop(notNumericalColumn, axis=1)\n",
     "testXnum = test_file_X.drop(notNumericalColumn, axis=1)\n",
-    "print(trainXnum)\n",
+    "print(trainXnum[72:77])\n",
     "numericalColumn = train_file_X.columns.drop(notNumericalColumn)\n",
     "print(\"/n\",numericalColumn)\n",
     "trainXnotNum = train_file_X.drop(numericalColumn, axis=1)\n",
@@ -973,9 +969,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# la righe nella colonna TotalCharges hanno valori mancanti\n",
+    "# Le righe nella colonna TotalCharges hanno valori mancanti\n",
     "\n",
-    "# sostituzione dei valori mancanti \"spazio\" con none\n",
+    "# Sostituzione dei valori mancanti \"spazio\" con none\n",
     "for n in trainXnum['TotalCharges'].keys():\n",
     "        if trainXnum['TotalCharges'][n]==' ':\n",
     "            trainXnum['TotalCharges'][n]=None\n",
@@ -991,13 +987,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#definisco un imputer per i valori null (10 valori in tutto)\n",
+    "# Definisco un imputer per i valori null (10 valori in tutto)\n",
     "# Imputation\n",
     "my_imputer = SimpleImputer()\n",
     "train_imputed_X_num = pd.DataFrame(my_imputer.fit_transform(trainXnum))\n",
     "test_imputed_X_num = pd.DataFrame(my_imputer.transform(testXnum))\n",
     "\n",
-    "# l'imputation rimuove il nome delle colonne, le rimetto\n",
+    "# L'imputation rimuove il nome delle colonne, le rimetto\n",
     "train_imputed_X_num.columns = trainXnum.columns\n",
     "test_imputed_X_num.columns = testXnum.columns"
    ]
@@ -1024,8 +1020,8 @@
     }
    ],
    "source": [
-    "# ora le 10 righe di TotalCharges hanno tutte dei valori\n",
-    "# calcolo dei valori missing in funzione delle colonne\n",
+    "# Ora le 10 righe di TotalCharges hanno tutte dei valori\n",
+    "# Calcolo dei valori missing in funzione delle colonne\n",
     "train_missing_values_count = train_imputed_X_num.isnull().sum()\n",
     "print(train_missing_values_count)"
    ]
@@ -1157,7 +1153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# come si può vedere la colonna TotalCharges ha ora tutti i valori settati"
+    "# Come si può vedere la colonna TotalCharges ha ora tutti i valori settati"
    ]
   },
   {
@@ -1421,7 +1417,7 @@
     }
    ],
    "source": [
-    "# inizio a lavorare sui valori non numerici\n",
+    "# Inizio a lavorare sui valori non numerici\n",
     "trainXnotNum"
    ]
   },
@@ -1444,14 +1440,14 @@
     }
    ],
    "source": [
-    "# separazione della tabella dei valori categorici in label e oneHot\n",
+    "# Separazione della tabella dei valori categorici in label e oneHot\n",
     "# in funzione delle due codifiche da applicare\n",
     "\n",
-    "# le colonne seguenti sono state selezionate per la one hot in quanto non \n",
+    "# Le colonne seguenti sono state selezionate per la one hot in quanto non \n",
     "# ho ritenuto i valori classificabili in un qualche ordine di grandezza\n",
     "oneHotColumn = [\"gender\",\"Contract\",\"PaymentMethod\"]\n",
     "\n",
-    "# al resto dei valori verrà applicata una label che assegnerà un valore \n",
+    "# Al resto dei valori verrà applicata una label che assegnerà un valore \n",
     "# incrementale con la logica: \"no ...\" < \"no\" < \"yes\" ed in base alla qualità\n",
     "# della connessione internet (\"no\" < \"DSL\" < \"Fiber optic\")\n",
     "labelColumn = trainXnotNum.columns.drop(oneHotColumn)\n",
@@ -1682,16 +1678,16 @@
     }
    ],
    "source": [
-    "# ottengo le colonne di X per la OH\n",
+    "# Ottengo le colonne di X per la OH\n",
     "trainXOH = trainXnotNum.drop(labelColumn, axis=1)\n",
     "testXOH = testXnotNum.drop(labelColumn, axis=1)\n",
     "\n",
-    "# applico la one hot alle colonne\n",
+    "# Applico la one hot alle colonne\n",
     "OH_encoder = OneHotEncoder(handle_unknown='ignore', sparse=False)\n",
     "trainXOH_cols = pd.DataFrame(OH_encoder.fit_transform(trainXOH))\n",
     "testXOH_cols = pd.DataFrame(OH_encoder.transform(testXOH))\n",
     "\n",
-    "# la codifica one hot rimuove gli indici li rimetto definendo anche le nuove colonne\n",
+    "# La codifica one hot rimuove gli indici li rimetto definendo anche le nuove colonne\n",
     "trainXOH_cols.index = trainXOH.index\n",
     "testXOH_cols.index = testXOH.index\n",
     "trainXOH_cols.columns = [\"Female\",\"Male\",\"Contract-MtoM\",\"Contract-1y\",\"Contract-2y\",\"Payment:Bank transfer\",\"Payment:Credit card\",\"Payment:Electronic check\",\"Payment:Mailed check\"]\n",
@@ -1911,7 +1907,7 @@
     }
    ],
    "source": [
-    "#ricavo le colonne su cui fare la label\n",
+    "# Ricavo le colonne su cui fare la label\n",
     "trainXlabel = trainXnotNum.drop(oneHotColumn, axis=1)\n",
     "testXlabel = testXnotNum.drop(oneHotColumn, axis=1)\n",
     "\n",
@@ -1924,7 +1920,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# funzione che applica la label assegnando i valori nell'ordine indicato in precedenza\n",
+    "# Funzione che applica la label assegnando i valori nell'ordine indicato in precedenza\n",
     "def labelTransform(x):\n",
     "    for n in x.keys():\n",
     "        if x[n].startswith(\"No \"):\n",
@@ -2122,6 +2118,8 @@
     }
    ],
    "source": [
+    "# Estrazione della colonna InternetService e applicazione della funzione\n",
+    "# precedente alle colonne restanti\n",
     "train_internet = trainXlabel.InternetService\n",
     "test_internet = testXlabel.InternetService\n",
     "\n",
@@ -2140,7 +2138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# funzione che applica la label alla connessione internet assegnando i valori nell'ordine indicato in precedenza\n",
+    "# Funzione che applica la label alla connessione internet assegnando i valori nell'ordine indicato in precedenza\n",
     "def internetTransform(x):\n",
     "    for n in x.keys():\n",
     "        if x[n].strip()=='No':\n",
@@ -2176,6 +2174,7 @@
     }
    ],
    "source": [
+    "# Trasformazione dei valori InternetService tramite la funzione precedente\n",
     "internetTransform(train_internet)\n",
     "internetTransform(test_internet)\n",
     "print(train_internet)"
@@ -2475,7 +2474,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cast sui valori y per evitare problemi dovuti ad int64 nel classificatore\n",
+    "# Ottengo un errore nei valori di y nel classificatore dovuto al tipo di valore\n",
+    "# che pero risulta int64 per tutte le y\n",
+    "# Cast sui valori y per evitare problemi dovuti ad int64 nel classificatore\n",
     "y_train=y_train.astype('int')\n",
     "y_val=y_val.astype('int')\n",
     "test_file_y=test_file_y.astype('int')\n",
@@ -2671,7 +2672,7 @@
    "source": [
     "# a fronte di un aumento dell'accuracy molte più featurs hanno importanza nulla\n",
     "\n",
-    "# stampa dell'albero ottenuto\n",
+    "# stampa dell'albero ottenuto (commentata per evitare un elaborazione molto lunga)\n",
     "#fig = plt.figure(figsize=(100,80))\n",
     "#tree.plot_tree(clas)"
    ]
@@ -2708,13 +2709,6 @@
    "source": [
     "# i valori non sono molto buoni"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
