Ulteriore correzione ai commenti

--- a/training.ipynb
+++ b/training.ipynb
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install pandas\n",
-    "#!pip install scikit-learn\n",
+    "!pip install pandas\n",
+    "!pip install scikit-learn\n",
     "import pandas as pd\n",
     "pd.options.mode.chained_assignment = None\n",
     "import numpy as np\n",
